[package]
name = "pallet-gas-calculator"
authors = []
description = ""
version = "0.1.0"
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", features = ["derive"], default-features = false }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { version = "0.4.20", default-features = false }
[dev-dependencies]
serde = { version = "1.0.186" }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
]
try-runtime = [ "frame-support/try-runtime" ]
